Bug 474406.  Revoke our pending constructor processing event if our document goes away.  r+sr=sicking